--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
       url: "https://instagram.com/mmistakes"
 
 # Build settings
-remote_theme: "mmistakes/minimal-mistakes@4.26.1"
+theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: "dark"
 plugins:
   - jekyll-feed
